# atk-registry

./: .gitignore  Makefile  README.md  index.yaml  pyproject.toml  ralph-tasks.yaml
.github/workflows/: registry-ci.yml
plugins/claude-code-atk/: README.md  install.sh  manage.py  plugin.yaml  status.sh  uninstall.sh
plugins/claude-dashboard/: .gitignore  README.md  SYSTEM.md  install.sh  manage.py  plugin.yaml  run_tests.sh  start.sh  stop.sh  test_manage.py  uninstall.sh
plugins/codanna/: README.md  SKILL.md  install.sh  plugin.yaml  uninstall.sh
plugins/exa/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/fetch/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/git-local/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/github/: README.md  SKILL.md  install.sh  plugin.yaml  start.sh  stop.sh  uninstall.sh
plugins/gitlab/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/google-workspace/: README.md  SKILL.md  plugin.yaml
plugins/langfuse/: README.md  docker-compose.yml  maintenance.sh  plugin.yaml
plugins/langfuse-official-mcp/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/metabase/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/notion/: README.md  SKILL.md  plugin.yaml
plugins/obsidian-local-rest-api/: README.md  SKILL.md  mcp.sh  plugin.yaml
plugins/openmemory/: Dockerfile.dashboard  README.md  SKILL.md  backup.sh  docker-compose.yml  install.sh  plugin.yaml  restore.sh  uninstall.sh
plugins/piper/: README.md  SKILL.md  install.sh  mcp-server.sh  plugin.yaml  pyproject.toml  server.py  uninstall.sh
scripts/: generate_index.py
(+71 files in other folders)
