[project]
name = "atk-registry"
version = "0.1.0"
description = "ATK plugin registry tooling"
requires-python = ">=3.11"
dependencies = [
    "atk-cli",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

